Fixed layout issue

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -72,7 +72,7 @@ $wco-gray: rgb(141, 144, 147);
 
   .right {
     // position: absolute;
-    right: 30px;
+    // right: 30px;
   }
 
   .header-navbar {
